Хотфиксс получения статей
